--- a/theme/foot.template
+++ b/theme/foot.template
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        联系：contact@wangdoc.com
+        联系：linjialiang@163.com
       </p>
     </div>
   </div>
