--- a/theme/script.template
+++ b/theme/script.template
@@ -1,8 +1,8 @@
 <script>
-  var LOPPO = {};
-  LOPPO.current_path = '<%= current_path %>';
-  LOPPO.relative_root_path = '<%= relative_root_path %>';
-  LOPPO.article_toc = <%= JSON.stringify(toc) %>;
+  var EMAD_LOPPO = {};
+  EMAD_LOPPO.current_path = '<%= current_path %>';
+  EMAD_LOPPO.relative_root_path = '<%= relative_root_path %>';
+  EMAD_LOPPO.article_toc = <%= JSON.stringify(toc) %>;
 </script>
 <script src="<%= relative_root_path %>assets/js/app.js"></script>
 
@@ -21,7 +21,7 @@ var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?5eec262881855af3dede6a71234571f6";
-  var s = document.getElementsByTagName("script")[0]; 
+  var s = document.getElementsByTagName("script")[0];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
