--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "emad-loppo-theme-wangdoc-frontpage",
-  "version": "1.0.3",
+  "name": "loppo-theme-wangdoc-frontpage",
+  "version": "0.4.1",
   "description": "template for Wangdoc frontpage",
   "main": "index.js",
   "scripts": {
@@ -10,16 +10,16 @@
     "build-css": "npm run clean-css && npm run build-sass && npm run build-autoprefix && npm run build-uglify",
     "build-autoprefix": "postcss --use autoprefixer --map false --output theme/assets/css/app.css theme/assets/css/app.css",
     "build-sass": "node-sass --output-style expanded --source-map true sass/app.sass theme/assets/css/app.css",
-    "build-uglify": "cleancss --source-map -o theme/assets/css/app.min.css theme/assets/css/app.css",
+    "build-uglify": "cleancss --source-map --with-rebase -o theme/assets/css/app.min.css theme/assets/css/app.css",
     "build-js": "mkdir -p theme/assets/js && npm run build-js-app && npm run build-js-support",
     "build-js-app": "browserify scripts/index.js | uglifyjs -c > theme/assets/js/app.js",
     "build-js-support": "uglifyjs scripts/support.js -c > theme/assets/js/s.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/linjialiang/emad-loppo-theme-wangdoc-frontpage",
+  "homepage": "https://github.com/wangdoc/loppo-theme-wangdoc-frontpage",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/linjialiang/emad-loppo-theme-wangdoc-frontpage.git"
+    "url": "https://github.com/wangdoc/loppo-theme-wangdoc-frontpage.git"
   },
   "keywords": [
     "loppo",
@@ -31,20 +31,17 @@
       "pre-commit": "npm run build-css && npm run build-js && git add -A"
     }
   },
-  "author": "Lin Jialiang",
+  "author": "Ruan Yifeng",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.3.4",
     "browserify": "^17.0.0",
-    "bulma": "^0.9.2",
-    "clean-css-cli": "5.x",
-    "husky": "6.x",
+    "bulma": "^0.9.3",
+    "clean-css-cli": "^5.3.3",
+    "husky": "4.3.8",
     "node-sass": "^5.0.0",
-    "postcss": "^8.2.9",
+    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "uglify-js": "^3.13.3"
-  },
-  "bugs": {
-    "url": "https://github.com/linjialiang/emad-loppo-theme-wangdoc-frontpage/issues"
+    "uglify-js": "^3.14.1"
   }
 }
