--- a/theme/script.template
+++ b/theme/script.template
@@ -1,7 +1,27 @@
 <script>
-  var EMAD_LOPPO = {};
-  EMAD_LOPPO.current_path = '<%= current_path %>';
-  EMAD_LOPPO.relative_root_path = '<%= relative_root_path %>';
-  EMAD_LOPPO.article_toc = <%= JSON.stringify(toc) %>;
+  var LOPPO = {};
+  LOPPO.current_path = '<%= current_path %>';
+  LOPPO.relative_root_path = '<%= relative_root_path %>';
+  LOPPO.article_toc = <%= JSON.stringify(toc) %>;
 </script>
 <script src="<%= relative_root_path %>assets/js/app.js"></script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111269443-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111269443-1');
+</script>
+
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5eec262881855af3dede6a71234571f6";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
